tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match13.bal
import ballerina/java;

function getIntFromJsonInt(int|string x) returns int = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;

